--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,6 +32,7 @@
     background-color: aliceblue;
     padding: 20px;
     border-radius: 20px;
+
   }
 
   .central{
@@ -52,6 +53,7 @@
     <a href="#heroe">Heroe</a>
     <a href="#centros-educativos">Centros Educativos</a>
     <a href="#lista">Lista</a>
+    <a href="#dbz">DBZ</a>
   </nav>
   <hr>
   <div class="central">
@@ -70,6 +72,11 @@
     <div id="centros-educativos" class="contenido">
       <app-instituto></app-instituto>
     </div>
+
+    <div id="dbz" class="contenido">
+      <app-dbz-main-page></app-dbz-main-page>
+    </div>
+
   </div>
 </div>
 
