--- a/src/app/dbz/components/add-personaje/add-dbz.html
+++ b/src/app/dbz/components/add-personaje/add-dbz.html
@@ -1,5 +1,5 @@
 <h4>Añadir personaje</h4>
-<form class="row">
+<form class="row" (ngSubmit)="addPersonaje()">
   <input type="text" [(ngModel)]="personaje.nombre" name="nombre" class="form-control mb-2" placeholder="Nombre">
   <input type="number" [(ngModel)]="personaje.fuerza" name="fuerza" class="form-control mb-2" placeholder="Fuerza">
   <button type="submit" class="btn btn-primary">Añadir</button>
