--- a/src/app/dbz/components/lista/lista-dbz.html
+++ b/src/app/dbz/components/lista/lista-dbz.html
@@ -2,13 +2,20 @@
   button{
     margin-top: 10px;
   }
+  .jaula{
+    overflow: auto;
+    height: 400px;
+  }
 </style>
-<div class="row">
-  <div class="row">
-    <h4>Listado</h4>
+<div class="jaula">
+  <h4>Listado</h4>
+  <div class="contenido">
     <ul class="list-group">
-      <li *ngFor="let personaje of listaPersonajes; let i=index; let esPar=odd; let esUltimo=last; let esPrimero=first" class="list-group-item" [ngClass]="{'list-group-item-primary':esPrimero,'list-group-item-secondary':esPar,'list-group-item-danger':esUltimo}">
-        {{personaje.nombre}} - FUERZA: {{personaje.fuerza}} - Es par: {{esPar}} - Es el ultimo: {{esUltimo}}
+      <li
+      *ngFor="let personaje of listaPersonajes; let i=index; let esPar=odd; let esUltimo=last; let esPrimero=first"
+      class="list-group-item"
+      [ngClass]="{'list-group-item-primary':esPrimero,'list-group-item-secondary':esPar,'list-group-item-danger':esUltimo}">
+        {{personaje.nombre}} ({{i+1}})- FUERZA: {{personaje.fuerza}} - Es par: {{esPar}} - Es el ultimo: {{esUltimo}}  <button style="width: 70px;height: 25px;font-size: 10px;" class="btn btn-danger" (click)="deletePersonaje(i)">Eliminar</button>
       </li>
     </ul>
   </div>
