--- a/src/app/dbz/pages/main-page.component.html
+++ b/src/app/dbz/pages/main-page.component.html
@@ -3,10 +3,10 @@
 
 <div class="row">
   <div class="col">
-    <dbz-lista [listaPersonajes]="personajes"></dbz-lista>
+    <dbz-lista [listaPersonajes]="personajes" (onDeletePersonaje)="onDeletePersonaje($event)"></dbz-lista>
   </div>
 
   <div class="col">
-    <dbz-add-personaje></dbz-add-personaje>
+    <dbz-add-personaje (onNewPersonaje)="onNewPersonaje($event)"></dbz-add-personaje>
   </div>
 </div>
