--- a/src/app/dbz/pages/main-page.component.html
+++ b/src/app/dbz/pages/main-page.component.html
@@ -3,7 +3,7 @@
 
 <div class="row">
   <div class="col">
-    <dbz-lista [listaPersonajes]="personajes" (onDeletePersonaje)="onDeletePersonaje($event)"></dbz-lista>
+    <dbz-lista [listaPersonajes]="personajes" (onDeletePersonajeById)="onDeletePersonajeById($event)"></dbz-lista>
   </div>
 
   <div class="col">
